--- a/app/src/main/res/layout/popup_interest.xml
+++ b/app/src/main/res/layout/popup_interest.xml
@@ -7,12 +7,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/message_intereses"
+        android:text="@string/message_preferences"
         android:id="@+id/textView3"
         android:layout_marginTop="29dp"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="20dp"
-        android:textColor="#6c6b6b" />
+        android:textColor="@color/colorPrimary"
+        android:paddingBottom="10dp"
+        android:layout_marginRight="15dp"
+        android:background="@drawable/border_bottom_primary"/>
 
     <CheckBox
         android:layout_width="wrap_content"
