--- a/app/src/main/res/drawable/border_bottom_primary.xml
+++ b/app/src/main/res/drawable/border_bottom_primary.xml
@@ -6,7 +6,7 @@
         android:right="-4dp"
         android:top="-4dp">>
         <shape android:shape="rectangle" >
-            <solid android:color="#ffffff" />
+           <!-- <solid android:color="#ffffff" />-->
             <stroke
                 android:width="1dp"
                 android:color="@color/colorPrimary" />
