--- a/app/src/main/res/layout/activity_preferences.xml
+++ b/app/src/main/res/layout/activity_preferences.xml
@@ -3,142 +3,177 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!--<TextView
+    <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+
+        <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/message_intereses"
+        android:text="@string/message_preferences"
         android:id="@+id/textView3"
-        android:layout_marginTop="29dp"
+        android:layout_marginBottom="5dp"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="20dp"
-        android:textColor="#6c6b6b" />-->
+        android:padding="15dp"
+        android:textColor="@color/colorPrimary"
+        android:textSize="16dp"
+        android:background="@drawable/border_bottom_primary"/>
 
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Bebés"
-        android:id="@+id/check_bebes"
-        android:layout_below="@+id/textView3"
-        android:layout_alignLeft="@+id/textView3"
-        android:layout_alignStart="@+id/textView3"
-        android:checked="false" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="15dp">
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Bebés"
+                android:id="@+id/check_bebes"
+                android:checked="false"
+                android:buttonTint="#4cb6c4" />
 
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Aprendizaje"
-        android:id="@+id/check_aprendizaje"
-        android:checked="false"
-        android:layout_below="@+id/check_bebes"
-        android:layout_alignLeft="@+id/check_bebes"
-        android:layout_alignStart="@+id/check_bebes" />
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Aprendizaje"
+                android:id="@+id/check_aprendizaje"
+                android:checked="false"
+                android:layout_below="@+id/check_bebes"
+                android:layout_alignLeft="@+id/check_bebes"
+                android:layout_marginTop="5dp"
+                android:layout_alignStart="@+id/check_bebes"
+                android:buttonTint="#4cb6c4" />
 
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Desarrollo cognitivo"
-        android:id="@+id/check_cognitivo"
-        android:checked="false"
-        android:layout_below="@+id/check_aprendizaje"
-        android:layout_alignLeft="@+id/check_aprendizaje"
-        android:layout_alignStart="@+id/check_aprendizaje" />
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Desarrollo cognitivo"
+                android:id="@+id/check_cognitivo"
+                android:checked="false"
+                android:layout_below="@+id/check_aprendizaje"
+                android:layout_alignLeft="@+id/check_aprendizaje"
+                android:layout_marginTop="5dp"
+                android:layout_alignStart="@+id/check_aprendizaje"
+                android:buttonTint="#4cb6c4" />
 
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Adolescentes"
-        android:id="@+id/checkBox"
-        android:checked="false"
-        android:layout_above="@+id/check_aprendizaje"
-        android:layout_alignLeft="@+id/check_salud"
-        android:layout_alignStart="@+id/check_salud" />
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Adolescentes"
+                android:id="@+id/checkBox"
+                android:checked="false"
+                android:layout_above="@+id/check_aprendizaje"
+                android:layout_alignLeft="@+id/check_salud"
+                android:layout_alignStart="@+id/check_salud"
+                android:clickable="false"
+                android:elegantTextHeight="false"
+                android:buttonTint="#4cb6c4" />
 
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Salud"
-        android:id="@+id/check_salud"
-        android:checked="false"
-        android:layout_below="@+id/checkBox"
-        android:layout_alignLeft="@+id/check_disciplina"
-        android:layout_alignStart="@+id/check_disciplina" />
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Salud"
+                android:id="@+id/check_salud"
+                android:checked="false"
+                android:layout_below="@+id/checkBox"
+                android:layout_alignLeft="@+id/check_disciplina"
+                android:layout_marginTop="5dp"
+                android:layout_alignStart="@+id/check_disciplina"
+                android:buttonTint="#4cb6c4" />
 
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Disciplina"
-        android:id="@+id/check_disciplina"
-        android:checked="false"
-        android:layout_below="@+id/check_salud"
-        android:layout_toRightOf="@+id/check_cognitivo"
-        android:layout_toEndOf="@+id/check_cognitivo" />
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Disciplina"
+                android:id="@+id/check_disciplina"
+                android:checked="false"
+                android:layout_below="@+id/check_salud"
+                android:layout_toRightOf="@+id/check_cognitivo"
+                android:layout_marginTop="5dp"
+                android:layout_toEndOf="@+id/check_cognitivo"
+                android:buttonTint="#4cb6c4" />
 
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Bebés"
-        android:id="@+id/checkBox4"
-        android:checked="false"
-        android:layout_below="@+id/check_cognitivo"
-        android:layout_alignLeft="@+id/check_cognitivo"
-        android:layout_alignStart="@+id/check_cognitivo" />
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Divorcio"
+                android:id="@+id/checkBox4"
+                android:checked="false"
+                android:layout_below="@+id/check_cognitivo"
+                android:layout_alignLeft="@+id/check_cognitivo"
+                android:layout_marginTop="5dp"
+                android:layout_alignStart="@+id/check_cognitivo"
+                android:buttonTint="#4cb6c4" />
 
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Problemas Sociales"
-        android:id="@+id/check_problemas"
-        android:checked="false"
-        android:layout_below="@+id/checkBox4"
-        android:layout_alignLeft="@+id/check_cognitivo" />
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Problemas Sociales"
+                android:id="@+id/check_problemas"
+                android:checked="false"
+                android:layout_below="@+id/checkBox4"
+                android:layout_marginTop="5dp"
+                android:layout_alignLeft="@+id/check_cognitivo"
+                android:buttonTint="#4cb6c4" />
 
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Comportamiento"
-        android:id="@+id/check_comportamiento"
-        android:checked="false"
-        android:layout_below="@+id/check_problemas"
-        android:layout_alignLeft="@+id/check_cognitivo" />
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Comportamiento"
+                android:id="@+id/check_comportamiento"
+                android:checked="false"
+                android:layout_below="@+id/check_problemas"
+                android:layout_marginTop="5dp"
+                android:layout_alignLeft="@+id/check_cognitivo"
+                android:buttonTint="#4cb6c4" />
 
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Adopción"
-        android:id="@+id/check_adopcion"
-        android:checked="false"
-        android:layout_below="@+id/check_disciplina"
-        android:layout_alignRight="@+id/check_disciplina"
-        android:layout_alignEnd="@+id/check_disciplina" />
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Adopción"
+                android:id="@+id/check_adopcion"
+                android:checked="false"
+                android:layout_below="@+id/check_disciplina"
+                android:layout_alignRight="@+id/check_disciplina"
+                android:layout_marginTop="5dp"
+                android:layout_alignEnd="@+id/check_disciplina"
+                android:buttonTint="#4cb6c4" />
 
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Desarrollo Emocional"
-        android:id="@+id/check_desarrollo"
-        android:checked="false"
-        android:layout_below="@+id/check_adopcion"
-        android:layout_toRightOf="@+id/check_problemas"
-        android:layout_toEndOf="@+id/check_problemas" />
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Desarrollo Emocional"
+                android:id="@+id/check_desarrollo"
+                android:checked="false"
+                android:layout_below="@+id/check_adopcion"
+                android:layout_toRightOf="@+id/check_problemas"
+                android:layout_marginTop="5dp"
+                android:layout_toEndOf="@+id/check_problemas"
+                android:buttonTint="#4cb6c4" />
 
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Escuela"
-        android:id="@+id/check_escuela"
-        android:checked="false"
-        android:layout_below="@+id/check_desarrollo"
-        android:layout_alignLeft="@+id/check_desarrollo"
-        android:layout_alignStart="@+id/check_desarrollo" />
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Escuela"
+                android:id="@+id/check_escuela"
+                android:checked="false"
+                android:layout_below="@+id/check_desarrollo"
+                android:layout_alignLeft="@+id/check_desarrollo"
+                android:layout_marginTop="5dp"
+                android:layout_alignStart="@+id/check_desarrollo"
+                android:buttonTint="#4cb6c4" />
 
-    <!--<Button
-        android:id="@+id/btn_acept_preferences"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Aceptar"
-        android:layout_marginTop="39dp"
-        android:layout_below="@+id/check_comportamiento"
-        android:layout_centerHorizontal="true" />-->
+            <!--<Button
+                android:id="@+id/btn_acept_preferences"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Aceptar"
+                android:layout_marginTop="39dp"
+                android:layout_below="@+id/check_comportamiento"
+                android:layout_centerHorizontal="true" />-->
+
+        </RelativeLayout>
+    </LinearLayout>
 
 </RelativeLayout>
