--- a/app/src/main/res/layout/fragment_item_question.xml
+++ b/app/src/main/res/layout/fragment_item_question.xml
@@ -9,13 +9,13 @@
     android:paddingRight="5dp">
 
     <ImageView
-        android:onClick="profileOn"
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:id="@+id/ic_user"
         android:src="@drawable/ic_profile"
         android:layout_marginLeft="5dp"
-        android:layout_marginTop="3dp" />
+        android:layout_marginTop="3dp"
+        android:clickable="true" />
 
     <!-- Preguntas -->
     <LinearLayout
@@ -29,18 +29,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Telmo Riofrio"
+            android:text=""
             android:textSize="14sp"
             android:textColor="#333333"
-            android:textStyle="bold"
-            android:clickable="true"
-            android:onClick="profileOn"/>
+            android:textStyle="bold" />
         <TextView
             android:id="@+id/txt_qdatetime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="hace 1 hora"
+            android:text=""
             android:layout_marginTop="3dp"
             android:textColor="#999999"
             android:textSize="12sp" />
@@ -49,7 +47,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nibh"
+            android:text=""
             android:singleLine="false"
             android:layout_marginTop="5dp"
             android:ellipsize="end"
@@ -61,8 +59,10 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="2dp">
-            <ImageView
+            android:paddingTop="2dp"
+            android:id="@+id/ly_themes"
+            android:orientation="horizontal" >
+            <!--<ImageView
                 android:id="@+id/ic_tag"
                 android:onClick="profileOn"
                 android:layout_width="10dp"
@@ -76,7 +76,7 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textSize="12sp"
-                android:text="Bebés"/>
+                android:text="Bebés"/>-->
         </LinearLayout>
 
         <!-- Reporte -->
@@ -85,7 +85,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingBottom="2dp">
-            <TextView
+            <!--<TextView
                 android:id="@+id/txt_qlikes"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -101,7 +101,7 @@
                 android:layout_height="wrap_content"
                 android:text="·"
                 android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"/>
+                android:layout_marginRight="5dp"/>-->
             <TextView
                 android:id="@+id/txt_qanswers"
                 android:layout_width="wrap_content"
@@ -110,7 +110,7 @@
                 android:textAlignment="center"
                 android:textSize="11sp"
                 android:textColor="#d3d3d3"
-                android:text="ss"
+                android:text=""
                 />
 
         </LinearLayout>
