Comunicaciones via POST para guardar pregunta

--- a/app/src/main/res/layout/activity_ask.xml
+++ b/app/src/main/res/layout/activity_ask.xml
@@ -16,19 +16,26 @@
         <!-- Question -->
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_gravity="top"
+            android:layout_height="150dp">
             <EditText
                 android:id="@+id/input_question"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textMultiLine"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:maxLength="150"
                 android:ems="12"
-                android:hint="Escribe aquí tu pregunta.."
-                android:layout_marginTop="5dp"/>
+                android:gravity="top"
+                android:singleLine="true"
+                android:inputType="textMultiLine"
+                android:background="@drawable/field_write_question"
+                android:textCursorDrawable="@drawable/cursor_text"
+                android:hint="@string/txt_write_question"
+                android:editable="true" />
         </RelativeLayout>
 
         <!-- Tags -->
-        <RelativeLayout
+        <!--<RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="80dp"
@@ -50,19 +57,32 @@
                     layout="@layout/activity_preferences">
                 </include>
             </ScrollView>
-        </RelativeLayout>
+        </RelativeLayout>-->
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
             android:id="@+id/btn_asking"
-            android:text="Enviar"
-            android:textColor="#FFFFFF"
-            android:layout_gravity="center_horizontal|right"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight=".20"
+            android:text="@string/btn_send"
             android:background="@drawable/button_fill_primary"
+            android:textColor="#FFFFFF"
+            android:layout_gravity="bottom|right"
+            android:layout_alignParentBottom="true"
+            android:layout_marginTop="10dp"
+            android:clickable="true" />
+            <!--android:layout_marginTop="30dp"
             android:layout_marginRight="10dp"
-            android:layout_marginLeft="70dp"
-            android:clickable="true"
-            android:layout_marginTop="30dp" />
+            android:layout_marginLeft="70dp"-->
+
+        <TextView
+            android:id="@+id/txt_test"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textAlignment="center"
+            android:textSize="11sp"
+            android:textColor="#d3d3d3"
+            android:text="" />
     </LinearLayout>
 </LinearLayout>
