--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -42,16 +42,16 @@
 
         </LinearLayout>
         <TextView
+            android:id="@+id/txt_profile_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Ricardo Arregui"
+            android:text=""
             android:textColor="@color/colorPrimaryLabel"
             android:textSize="19dp"
             android:focusable="true"
             android:layout_gravity="center"
             android:paddingTop="7dp"
-            android:textStyle="bold"
-            android:id="@+id/txt_profile_name" />
+            android:textStyle="bold" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -61,9 +61,10 @@
             android:layout_gravity="center"
             android:textStyle="bold" />
         <TextView
+            android:id="@+id/txt_profile_goodfather"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:text="@string/description_user"
+            android:text=""
             android:textColor="@color/colorPrimaryLabel"
             android:textSize="13dp"
             android:textAlignment="center"
