--- a/app/src/main/res/layout/fragment_item_guru.xml
+++ b/app/src/main/res/layout/fragment_item_guru.xml
@@ -2,8 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:paddingTop="5dp"
-    android:paddingBottom="5dp"
-    android:layout_height="match_parent">
-
+    android:layout_height="wrap_content"
+    android:paddingBottom="20dip"
+    android:paddingTop="20dip">
 </LinearLayout>
+<!-- <com.jws.MyExpandableListView
+        android:id="@+id/expList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:scrollbars="none"
+        android:divider="@drawable/expandable_list_group_divider"
+        android:childDivider="@drawable/expandable_list_child_divider"/> -->
