--- a/app/src/main/res/layout/activity_publications_guru.xml
+++ b/app/src/main/res/layout/activity_publications_guru.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/border_bottom_primary"
         android:padding="5dp">
-        <ImageView
+        <!--<ImageView
             android:onClick="profileOn"
             android:layout_width="40dp"
             android:layout_height="35dp"
@@ -29,7 +29,7 @@
             android:focusable="true"
             android:layout_gravity="center"
             android:paddingTop="7dp"
-            android:layout_marginLeft="50dp"/>
+            android:layout_marginLeft="50dp"/>-->
     </RelativeLayout>
 
     <RelativeLayout
