--- a/app/src/main/res/layout/fragment_list_gurus.xml
+++ b/app/src/main/res/layout/fragment_list_gurus.xml
@@ -10,6 +10,7 @@
         android:layout_height="match_parent"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
-        android:layout_width="match_parent" />
+        android:layout_width="match_parent"
+        android:transcriptMode="alwaysScroll"/>
 
 </LinearLayout>
