--- a/app/src/main/res/layout/view_categories_gurus.xml
+++ b/app/src/main/res/layout/view_categories_gurus.xml
@@ -2,10 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:paddingLeft="10dp"
-    android:paddingRight="10dp"
-    android:layout_marginBottom="20dp"
-    android:layout_height="match_parent">
+    android:paddingRight="10dp">
 
     <ImageView
         android:layout_width="15dp"
