--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="mediumGrey">#ADADAD</color>
     <color name="backgroundGrey">#f5f5f5</color>
     <color name="normalText">#616161</color>
+    <color name="backgroundContainer">#ffffff</color>
 
 
     <!-- ActionBar Color-->
