Ajustes en tab de publicaciones

--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -96,8 +96,8 @@
             android:text="@string/btn_aceptar"
             android:onClick="keepOn"
             android:clickable="true"
-            android:background="@drawable/background_button_white"
-            android:textColor="#35adbd"
+            android:background="@drawable/button_fill_primary"
+            android:textColor="@color/colorPrimaryLabel"
             android:layout_gravity="center_vertical"
             android:layout_alignParentBottom="true"
             android:layout_alignParentTop="false"
