--- a/app/src/main/res/layout/fragment_list_posts.xml
+++ b/app/src/main/res/layout/fragment_list_posts.xml
@@ -1,14 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:weightSum="1">
 
-    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    <include
+        android:id="@+id/loading_questions"
+        layout="@layout/loading_view">
+    </include>
+
+    <ListView android:id="@id/android:list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="Listado de Publicaciones">
-    </TextView>
+        android:layout_weight=".80"
+        android:drawSelectorOnTop="false" />
 
+    <Button
+        android:id="@+id/btn_do_post"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+           android:text="@string/btn_publicar"
+        android:textSize="13dp"
+        android:textColor="#FFFFFF"
+        android:background="@drawable/button_fill_primary"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="6dp"
+        android:layout_marginRight="70dp"
+        android:layout_marginLeft="70dp"
+        android:clickable="true"
+        android:onClick="post" />
 </LinearLayout>
