--- a/app/src/main/res/layout/fragment_item_post.xml
+++ b/app/src/main/res/layout/fragment_item_post.xml
@@ -4,34 +4,26 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="7dp"
-    android:paddingLeft="5dp"
+    android:paddingLeft="1dp"
     android:paddingTop="5dp"
     android:paddingRight="5dp">
-
-        <TextView
-            android:id="@+id/txt_ptitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Que hacer cuando los niños se chupan los dedos.."
-            android:textSize="14sp"
-            android:textColor="#333333"
-            android:textStyle="bold" />
-
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="2dp">
-        <ImageView
-            android:onClick="profileOn"
-            android:layout_width="15dp"
-            android:layout_height="15dp"
-            android:id="@+id/ic_user"
-            android:src="@drawable/ic_profile"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="3dp" />
-
+        android:orientation="horizontal">
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:paddingTop="2dp">
+            <ImageView
+                android:onClick="profileOn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/ic_user"
+                android:src="@drawable/ic_profile"
+                android:layout_marginLeft="2dp"
+                android:layout_marginTop="2dp"/>
             <TextView
                 android:id="@+id/txt_puser"
                 android:layout_width="wrap_content"
@@ -39,31 +31,60 @@
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="Pedro Xavier"
                 android:layout_marginLeft="3dp"
-                android:layout_marginTop="3dp"
-                android:layout_marginRight="10dp"
-                android:textColor="#999999"
-                android:textSize="12sp" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:id="@+id/txt_pdatetime"
-            android:layout_width="wrap_content"
+                android:layout_marginTop="0dp"
+                android:textColor="#4d8eb4"
+                android:textSize="14sp" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="hace 2 dias"
-            android:layout_marginTop="3dp"
-            android:textColor="#999999"
-            android:layout_marginLeft="7dp"
-            android:textSize="12sp" />
+            android:gravity="right">
+            <TextView
+                android:id="@+id/txt_pdatetime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="hace 2 dias"
+                android:layout_marginTop="3dp"
+                android:textColor="#999999"
+                android:layout_marginLeft="7dp"
+                android:textSize="12sp" />
+        </LinearLayout>
     </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="36dp"
+        android:layout_marginTop="-14dp"
+        android:gravity="left" >
+        <TextView
+            android:id="@+id/txt_ptitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Que hacer cuando los niños se chupan los dedos.."
+            android:textSize="14sp"
+            android:textStyle="bold"
+            android:textColor="#333333"/>
+        <TextView
+            android:id="@+id/txt_qcontent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Lorem impusn doler at si mel.."
+            android:singleLine="false"
+            android:layout_marginTop="5dp"
+            android:ellipsize="end"
+            android:maxLines="5"
+            android:textColor="#666666"
+            android:textSize="14sp" />
 
         <!-- Tags -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="7dp"
             android:paddingTop="2dp">
             <ImageView
                 android:id="@+id/ic_tag"
@@ -95,7 +116,7 @@
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textAlignment="center"
                 android:textSize="11sp"
-                android:textColor="#d3d3d3"
+                android:textColor="@color/mediumGrey"
                 android:text="ss"
                 />
             <TextView
@@ -112,10 +133,9 @@
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textAlignment="center"
                 android:textSize="11sp"
-                android:textColor="#d3d3d3"
+                android:textColor="@color/mediumGrey"
                 android:text="ss"
                 />
-
         </LinearLayout>
-
+    </LinearLayout>
 </LinearLayout>
